--- a/src/components/maps/Canvas.css
+++ b/src/components/maps/Canvas.css
@@ -2,4 +2,5 @@ canvas, .konvajs-content {
   width: initial !important;
   height: initial !important;
   max-width: 100%;
+  margin-bottom: 20px;
 }
