--- a/src/components/maps/Canvas.css
+++ b/src/components/maps/Canvas.css
@@ -1,8 +1,6 @@
-.maps {
-  canvas, .konvajs-content {
-    width: initial !important;
-    height: initial !important;
-    max-width: 100%;
-    margin-bottom: 20px;
-  }
+.maps canvas, .maps .konvajs-content {
+  width: initial !important;
+  height: initial !important;
+  max-width: 100%;
+  margin-bottom: 20px;
 }
