--- a/src/components/dice/Dice.css
+++ b/src/components/dice/Dice.css
@@ -1,8 +1,8 @@
 .dice {
-  box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, 0.2), inset -2px -2px 1px 1px rgba(0, 0, 0, 0.2);
-  background-color: rgba(240, 240, 240, 1);
+  box-shadow: inset 0px 0px 6px 1px rgba(0, 0, 0, 0.2), inset -1px -1px 3px 1px rgba(0, 0, 0, 0.2);
+  background-color: #f2f2f2;
   border-radius: 8px;
-  border: 1px solid rgba(185, 185, 185, 1);
+  border: 1px solid #aaa;
   font-weight: bold;
 }
 
